<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.blaisecalaycay.qwirkyqwerty.PickSessionActivity"
    android:background="?android:attr/selectableItemBackgroundBorderless">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/session_1_active"
        android:id="@+id/text_session_1"
        android:layout_marginTop="28dp"
        android:textSize="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:onClick="startSession"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:layout_below="@+id/text_label_pick_session"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/session_2_active"
        android:id="@+id/text_session_2"
        android:layout_alignTop="@+id/text_session_1"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:onClick="startSession"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/session_3_active"
        android:id="@+id/text_session_3"
        android:layout_alignTop="@+id/text_session_2"
        android:layout_alignParentEnd="true"
        android:textSize="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:onClick="startSession"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/session_4_active"
        android:id="@+id/text_session_4"
        android:layout_alignTop="@+id/text_session_5"
        android:layout_alignParentStart="true"
        android:textSize="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:onClick="startSession"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/session_5_active"
        android:id="@+id/text_session_5"
        android:layout_below="@+id/text_session_2"
        android:layout_alignStart="@+id/text_session_2"
        android:layout_marginTop="33dp"
        android:textSize="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:onClick="startSession"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/session_6_active"
        android:id="@+id/text_session_6"
        android:layout_alignTop="@+id/text_session_5"
        android:layout_alignParentEnd="true"
        android:textSize="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:onClick="startSession"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/session_7_active"
        android:id="@+id/text_session_7"
        android:layout_below="@+id/text_session_4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:textSize="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:onClick="startSession"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="PICK A SESSION"
        android:id="@+id/text_label_pick_session"
        android:textStyle="bold"
        android:layout_marginTop="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/session_trial"
        android:id="@+id/text_session_trial"
        android:textSize="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/text_session_7"
        android:layout_alignParentStart="true"
        android:onClick="startSession"/>

</RelativeLayout>
